--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
