--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.3",
     "@tanstack/react-table": "^8.21.2",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -45,6 +46,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.5",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
