--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,11 @@
+version: "3.8"
+
 services:
-  mariadb:
-    image: mariadb:11.3
-    container_name: university_mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: university
-      MYSQL_USER: uni_user
-      MYSQL_PASSWORD: uni_password
+  nextjs:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: university_management
     ports:
-      - "3306:3306"
-    volumes:
-      - mariadb_data:/var/lib/mysql
-    networks:
-      - uni_network
-
-  server:
-    image: ngoctruongbui/university-management-system-develop:latest
-    container_name: university_server
-    ports:
-      - '8081:8081'
-    environment:
-      DB_HOST: mariadb
-      DB_PORT: 3306
-      DB_USER: uni_user
-      DB_PASSWORD: uni_password
-      DB_NAME: university
-      JWT_SECRET: super_secret_key
-      JWT_EXPIRES_IN_ACCESS: 1d
-      JWT_EXPIRES_IN_REFRESH: 7d
-    depends_on:
-      mariadb:
-        condition: service_started
-    networks:
-      - uni_network
-
-volumes:
-  mariadb_data:
-
-
-networks:
-  uni_network:
-    driver: bridge
+      - "4444:3000"
+    restart: unless-stopped
