--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.IMAGE_NAME }}-develop:${{ secrets.TAG_NAME }} .
+        run: docker build --no-cache -t ${{ secrets.IMAGE_NAME }}-develop:${{ secrets.TAG_NAME }} .
 
       - name: Add tag docker image (optional)
         run: docker tag ${{ secrets.IMAGE_NAME }}-develop:${{ secrets.TAG_NAME }} ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}-develop:${{ secrets.TAG_NAME }}_${{ github.sha }}
